Updated drawer-settings.scss to resolve styling issue that caused the import and add buttons to overlap.

--- a/assets/css/builder.css
+++ b/assets/css/builder.css
@@ -715,17 +715,18 @@ All styles used within the drawer
   display: block;
   margin-bottom: 20px; }
 
-.ninja-forms-app label::after {
-  clear: both;
-  content: "";
-  display: block; }
+.ninja-forms-app label {
+  position: relative; }
+  .ninja-forms-app label::after {
+    clear: both;
+    content: "";
+    display: block; }
 
 .ninja-forms-app legend {
   margin: 0 3px 10px;
   padding: 0 10px; }
 
 .ninja-forms-app .nf-setting-label, .ninja-forms-app label, .ninja-forms-app legend {
-  position: relative;
   color: #424242;
   display: block;
   font-size: 13px;
@@ -973,12 +974,10 @@ All styles used within the drawer
     text-indent: -99999px; }
 
 .nf-action-items.available .nf-item.nf-has-img {
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  filter: grayscale(100%);
   opacity: 0.6; }
   .nf-action-items.available .nf-item.nf-has-img:hover {
-    -webkit-filter: grayscale(0);
-            filter: grayscale(0);
+    filter: grayscale(0);
     opacity: 1.0; }
 
 .nf-field-type-button {
